--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "wallet-app",
+  "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.2.1",
+    "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
