--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "react-scroll": "^1.7.10",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
